# point-drone-vst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/audio/: GhostVoice.cpp  GhostVoice.h  HarmonicAnalyzer.h  PointRenderer.cpp  PointRenderer.h  PointRuntimeTelemetry.h  PointVoice.cpp  PointVoice.h  ResonanceInteraction.h
source/controller/: EditorController.cpp  EditorController.h  EditorViewModels.h
source/core/: ChartMapping.h  RandomModulator.cpp  RandomModulator.h  Theme.h
source/domain/: PointModel.h  ProjectModel.h  SnapshotModel.h
source/plugin/: PointDroneAudioProcessor.cpp  PointDroneAudioProcessor.h  PointDroneAudioProcessorEditor.cpp  PointDroneAudioProcessorEditor.h
source/state/: ProjectState.cpp  ProjectState.h
source/ui/: AppLookAndFeel.cpp  AppLookAndFeel.h  ChartComponent.cpp  ChartComponent.h  FieldStrip.cpp  FieldStrip.h  InspectorPanel.cpp  InspectorPanel.h  MasterOutputStrip.cpp  MasterOutputStrip.h  ModulatableSlider.h  ModulationPopup.cpp  ModulationPopup.h  PointWavePreview.cpp  PointWavePreview.h  SnapshotSlots.cpp  SnapshotSlots.h  SnapshotTransitionStrip.cpp  SnapshotTransitionStrip.h  WaveMixSliders.cpp  WaveMixSliders.h
